@@ -2,7 +2,8 @@ DIST bmp_j4.zip 1711 RMD160 14791dd3b9737c11eea9f3dd21f9e515108a5bff SHA1 d1c7f2
 DIST bwt_j3.zip 16535 RMD160 523b09d25217531ed9829a1cc4e27413a15a0dcb SHA1 06b24a7cd749eac1958e73725bf4849395616939 SHA256 c5e75abdd8d8a3fb6effa3c467e98aeb3175068bd454a635baae79de024b9120
 DIST bwt_slowmode1.zip 138176 RMD160 71d456f7ebfa8af38f9e7e379105c4a3a7151637 SHA1 3bd01c1ca32d07fdb5ed71851de50e46d528394d SHA256 3b7fb3c4a2491b4f8b2c243f7f67a4f2c7d2b793558207001b2565f06e145a92
 DIST exe_j1.zip 9828 RMD160 5a2c83290a03fd54e6261ae4d791df5775500458 SHA1 28fa03a186aa47f7217201727fa3cdbd2ee7f635 SHA256 8e13ca38ed6fb7fd9ae5244c44b045f179b068c3d3281f1f2690c352e45ca239
+DIST fast.cfg 359 RMD160 345ebcc3a7faa880d1e1c215cc9ceb4fa059a6b4 SHA1 9268e938c04a7aebe16da1d55953db033b195222 SHA256 2cf9605ba5eb73a58146509844d4b360c07ae55ebc2ab92d485d0c907166cfda
 DIST jpg_test2.zip 12189 RMD160 5c8e133aa613aa5d2769ef8394fb9d4f65d9ce00 SHA1 da31b4afa85dc46e924bf407c018f2495cf0ef85 SHA256 b09eedf0760826fa6822d266c1e262e67ad4ac119e11235e192e208e558e4855
-EBUILD zpaq-extras-0_p20091101.ebuild 1023 RMD160 c7f196c58dbd90905083860c153ec4f9285d37b2 SHA1 ecd8552c04e6143e5247895936fd502aa928bf05 SHA256 d04aebfe5830cdee30ef721cb40ee021e0ff397f388fa3f8056001d73dd34ae2
-MISC ChangeLog 272 RMD160 bbc2c719042b3438c229d5b7b8c10d8ca6f40841 SHA1 b4f7a80a44f833b47af62ed9a36ccda6d8084cbf SHA256 03dca2128858bf766f39755f96bc925170d50fe8048e8a5df2b48fabc00c85c5
+EBUILD zpaq-extras-0_p20100426.ebuild 1078 RMD160 d13aa3dd3b71716eac4c23b9b05f97a4a6704aab SHA1 3ac2e96b246145c8f54ae1a7bbffa74df9d46370 SHA256 7c3948bf9d02ff715114cfaa957bd420591f224f3e8e4c9fe2552177678bdde2
+MISC ChangeLog 439 RMD160 26f2723c2a8f4201024d379ab5ac23ef86894d20 SHA1 f302100aa9ea6a2f0689e246d097daa8d2de6499 SHA256 eee3a3efa94907d15501fcf505c163fcb409cfebe95aef13957fb712e6ec9f82
 MISC metadata.xml 231 RMD160 6aebfea93d789d2b96ea6d8259dc842dd1fdacd3 SHA1 e10a04c4c18a66af326abc1f40c61b28cc610fae SHA256 48054ea190d00518c1e035fc6663b2368854cdea5ff69a94830e4f9a38260987
